# dungeon-bot

./: .gitignore  .gitlab-ci.yml  Cargo.toml  _config-gitlab.yml  changelog.adoc  readme.adoc  sqlx-data.json
db/: model.dbm
db/migrations/: 20201126110637_init.sql
docs/: .gitignore  Makefile  commands.adoc  encounters.adoc  fights.adoc  readme.adoc
src/: bot.rs  config.rs  dice.rs  lib.rs  main.rs  message.pest
src/character/: class.rs  mod.rs  race.rs  stats.rs
src/db/: player.rs
