[package]
name = "dungeon-bot"
version = "0.1.0"
authors = ["Chronophylos <nikolai@chronophylos.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.34"
regex = "1.4.2"
twitchchat = { version = "0.14", features = ["async", "async-tls", "smol"] }
smol = "1.2.4"
log = "0.4.11"
ron = "0.6.2"
serde = { version = "1.0.117", features = ["derive"] }
sqlx = { version = "0.4.0", features = [
    "runtime-async-std-rustls",
    "postgres",
    "migrate",
    "chrono",
    "macros",
    "offline",
] }
chrono = "0.4.19"
simple_logger = "1.11.0"
