[package]
name = "dungeon-bot"
version = "0.1.0"
authors = ["Chronophylos <nikolai@chronophylos.com>"]
edition = "2018"
repository = "https://gitlab.com/chronophylos/dungeon-bot"
license = "MIT"

[dependencies]
anyhow = "1.0.35"
regex = "1.4.2"
twitchchat = { version = "0.14.8", features = ["async", "async-tls", "smol"] }
smol = "1.2.5"
log = "0.4.11"
ron = "0.6.2"
serde = { version = "1.0.118", features = ["derive"] }
sqlx = { version = "0.4.1", features = [
    "runtime-async-std-rustls",
    "postgres",
    "migrate",
    "chrono",
    "macros",
    "offline",
] }
chrono = "0.4.19"
simple_logger = "1.11.0"
rand = "0.7.3"
rand_chacha = "0.3.0"
pest = "2.1"
pest_derive = "2.1"
lazy_static = "1.4.0"
